<resources>
    <string name="app_name">Infosys</string>
    <string name="blink">Blink</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="communities">Communities</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="signup_prompt">Don\'t have an account? Sign up</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logout">Logout</string>
    <string name="friends">Friends</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="friend_name">Friend Name</string>
    <string name="last_message">Last message</string>
    <string name="message">Message</string>
    <string name="send_button">Send Button</string>
    <string name="placeholder_text">Placeholder text</string>
    <string name="you">You</string>
    <string name="chats">Chats</string>
    <string name="profile_picture_description">Profile Picture</string>
    <string name="all_posts">All Posts</string>
    <string name="all_communities">All Communities</string>
    <string name="your_communities">Your Communities</string>
    <string name="create_community">Create Community</string>
    <string name="description">Description</string>
    <string name="community_name">Community Name</string>
    <string name="create_a_community">Create a community</string>
    <string name="you_haven_t_joined_any_communities_yet">You haven\'t joined any communities yet 😔</string>
    <string name="community_image">Community Image</string>
    <string name="txt_community_name">Community Name</string>
    <string name="txt_members">0 members</string>
    <string name="txt_community_description">Community Description</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="joined">Joined</string>
    <string name="join">Join</string>
    <string name="add_a_post_to_the_community">Add a post to the community</string>
    <string name="recent">Recent</string>
    <string name="popular">Popular</string>
    <string name="default_notification_channel_id">default_channel</string>
</resources>