<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_communities"
        android:enabled="true"
        android:icon="@drawable/ic_communities"
        android:title="@string/communities" />
    <item
        android:id="@+id/nav_chats"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chats" />
    <item
        android:id="@+id/nav_notifications"
        android:enabled="true"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@+id/nav_profile"
        android:enabled="true"
        android:icon="@drawable/ic_profile_placeholder"
        android:title="@string/you" />
</menu>